# Distribution-Pokemon-Record-Form

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Code.js  DEPLOYMENT.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  README_API.md  TESTING.md  api-client.js  auth-debug.sh  cloudbuild.yaml  fix-auth.sh  googlecloud-api-test.sh  index.html  new-spreadsheet-test.sh  pokebros-deploy.sh  pokemon_data.json  pyproject.toml  script.js  style.css  task.md
GAS/: Code.js
api/: README.md  __init__.py  main.py
legacy/: README.md
migration/: gas-to-api.py
tests/: test_api.py
